--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
+        "multer": "^1.4.3",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.15"
     },
